01-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: linux
  namespace: default
spec:
  containers:
    - name: busybox
      image: busybox
      command:
      - sleep
      - "3600"
      resources:
        limits:
          memory: "10Mi"
          cpu: "100m"
    - name: alpine
      image: alpine
      command:
      - sleep
      - "3600"
      resources:
        limits:
          memory: "10Mi"
          cpu: "100m"
