03-service-nginx-lb.yaml
apiVersion: v1
kind: Service 
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ##type: NodePort
  ports:
    - port: 80
      # targetPort: 8080
      # nodePort: 30002
  selector:
    app: nginx
  externalIPs:
  - 192.168.64.2
