05-ingress-to-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: nginx
spec:
  rules:
  - http:
      paths:
      - path: /nginx 
        backend:
          serviceName: nginx
          servicePort: 80



##helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
